<resources>
    <string name="app_name">WelderAkS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="employers">Работники</string>
    <string name="finance">Финансы</string>
    <string name="instruments">Инструменты</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_in">Войти</string>
    <string name="remove">Удалить</string>
    <string name="add_instrument">Добавить</string>
    <string name="profile">Профиль</string>
    <string name="hours">Часов: %1$s</string>
    <string name="rate">Ставка: %1$s</string>
    <string name="coefficient">Коэф-ент: %1$s</string>
    <string name="description">Комментарий: \n %1$s</string>
    <string name="details_of_instrument">Описание инструмента</string>
    <string name="empty_instruments_list">На Вас нет ни одного инструмента</string>
    <string name="old_version">Устаревшая версия программы</string>
</resources>