<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile_worker">

    <fragment
        android:id="@+id/navigation_profile_worker"
        android:name="com.boycodebyte.welderaks.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/navigation_finance_worker"
        android:name="com.boycodebyte.welderaks.ui.finance.worker.FinanceFragment"
        android:label="@string/finance"
        tools:layout="@layout/fragment_finance_worker" />

    <fragment
        android:id="@+id/navigation_instruments_worker"
        android:name="com.boycodebyte.welderaks.ui.instruments.worker.InstrumentsFragment"
        android:label="@string/instruments"
        tools:layout="@layout/fragment_instruments_worker" >
        <action
            android:id="@+id/action_instrumentDetailsFragment"
            app:destination="@+id/navigation_instrument_details_worker" />
    </fragment>
    <fragment
        android:id="@+id/navigation_instrument_details_worker"
        android:name="com.boycodebyte.welderaks.ui.instruments.worker.detailsinstrument.DetailsFragment"
        android:label="@string/details_of_instrument">
        <argument
            android:name="identification"
            app:argType="integer" />
    </fragment>
</navigation>