<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.boycodebyte.welderaks.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/navigation_employers"
        android:name="com.boycodebyte.welderaks.ui.employers.EmployersFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_employers" >
        <action
            android:id="@+id/action_navigation_employers_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
        <action
            android:id="@+id/action_navigation_employers_to_additionProfileFragment"
            app:destination="@id/additionProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finance"
        android:name="com.boycodebyte.welderaks.ui.finance.general.FinanceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_finance" />

    <fragment
        android:id="@+id/navigation_instruments"
        android:name="com.boycodebyte.welderaks.ui.instruments.general.InstrumentsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_instruments" >
        <action
            android:id="@+id/action_navigation_instruments_to_instrumentDetailsFragment"
            app:destination="@id/instrumentDetailsFragment"
            />
        <action
            android:id="@+id/action_navigation_instruments_to_additionInstrumentFragment"
            app:destination="@id/additionInstrumentFragment" />
    </fragment>
    <fragment
        android:id="@+id/instrumentDetailsFragment"
        android:name="com.boycodebyte.welderaks.ui.instruments.general.detailsinstrument.InstrumentDetailsFragment"
        android:label="InstrumentDetails"
        >
        <argument
            android:name="identification"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/additionInstrumentFragment"
        android:name="com.boycodebyte.welderaks.ui.instruments.general.additioninstrument.AdditionInstrumentFragment"
        android:label="AdditionInstrumentFragment" />
    <fragment
        android:id="@+id/profileDetailsFragment"
        android:name="com.boycodebyte.welderaks.ui.employers.detailsprofile.ProfileDetailsFragment"
        android:label="ProfileDetailsFragment" >
        <argument
            android:name="idProfile"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/additionProfileFragment"
        android:name="com.boycodebyte.welderaks.ui.employers.additionprofile.AdditionProfileFragment"
        android:label="AdditionProfileFragment" />
</navigation>